--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "zod": "^3.25.32"
   },
   "devDependencies": {
