--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@syncfusion/ej2-react-gantt": "^29.2.11",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.35",
+    "frappe-gantt": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -24,8 +25,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/frappe-gantt": "^0.9.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
