--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.1.1",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.35",
@@ -20,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "resend": "^4.6.0",
     "zod": "^3.25.32"
   },
   "devDependencies": {
