--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "daisyui": "^5.0.35",
+    "framer-motion": "^12.23.0",
     "frappe-gantt": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
@@ -22,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "resend": "^4.6.0",
     "zod": "^3.25.32"
   },
