--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "resend": "^4.6.0",
     "zod": "^3.25.32"
   },
