--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.0.35",
     "framer-motion": "^12.23.0",
     "frappe-gantt": "^1.0.3",
@@ -21,6 +22,7 @@
     "next": "15.3.2",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-simple-typewriter": "^5.0.1",
