--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "node-cron": "^4.2.1",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
