types issues are fixed in full project

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "frappe-gantt": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
-    "next": "15.3.2",
+    "next": "^15.5.3",
     "node-cron": "^4.2.1",
     "pdfkit": "^0.17.1",
     "react": "^19.0.0",
@@ -40,6 +40,7 @@
     "@types/pdfkit": "^0.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
