--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "cloudinary": "^2.7.0",
     "daisyui": "^5.0.35",
     "framer-motion": "^12.23.0",
     "frappe-gantt": "^1.0.3",
